force-app/main/default/objects/ApexHealth__c/ApexHealth__c.object-meta.xml
<CustomObject>
    <label>Apex Health</label>
    <nameField>
        <displayFormat>AH-{000000}</displayFormat>
        <label>Apex Health Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Health</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>