force-app/main/default/objects/ApexHealth__c/fields/HealthPercentage__c.field-meta.xml
<CustomField>
    <fullName>HealthPercentage__c</fullName>
    <description>Calculates the health percentage of class based on the used and unused values</description>
    <formula>((NbOfVariablesUsed__c + NbOfMethodsUsed__c)/(NbOfVariablesPresent__c + NbOfMethodsPresent__c)) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates the health percentage of class based on the used and unused values</inlineHelpText>
    <label>Health Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>