force-app/main/default/objects/ApexHealth__c/fields/LoadId__c.field-meta.xml
<CustomField>
    <fullName>LoadId__c</fullName>
    <description>It specifies the unique id for each load of apex health data</description>
    <inlineHelpText>It specifies the unique id for each load of apex health data</inlineHelpText>
    <label>Load Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>