force-app/main/default/objects/ApexHealth__c/fields/MethodsPresent__c.field-meta.xml
<CustomField>
    <fullName>MethodsPresent__c</fullName>
    <label>Methods Present</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>