force-app/main/default/objects/ApexHealth__c/fields/MethodsUnused__c.field-meta.xml
<CustomField>
    <fullName>MethodsUnused__c</fullName>
    <label>Methods Unused</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>