force-app/main/default/objects/ApexHealth__c/fields/MethodsUsed__c.field-meta.xml
<CustomField>
    <fullName>MethodsUsed__c</fullName>
    <label>Methods Used</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>