force-app/main/default/objects/ApexHealth__c/fields/NbOfMethodsPresent__c.field-meta.xml
<CustomField>
    <fullName>NbOfMethodsPresent__c</fullName>
    <label>Nb Of Methods Present</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>