force-app/main/default/objects/ApexHealth__c/fields/NbOfMethodsUnused__c.field-meta.xml
<CustomField>
    <fullName>NbOfMethodsUnused__c</fullName>
    <label>Nb Of Methods Unused</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>