force-app/main/default/objects/ApexHealth__c/fields/NbOfMethodsUsed__c.field-meta.xml
<CustomField>
    <fullName>NbOfMethodsUsed__c</fullName>
    <label>Nb Of Methods Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>