force-app/main/default/objects/ApexHealth__c/fields/NbOfVariablesPresent__c.field-meta.xml
<CustomField>
    <fullName>NbOfVariablesPresent__c</fullName>
    <description>Indicates number of variables present in a class</description>
    <inlineHelpText>Indicates number of variables present in a class</inlineHelpText>
    <label>Nb Of Variables Present</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>