force-app/main/default/objects/ApexHealth__c/fields/NbOfVariablesUnused__c.field-meta.xml
<CustomField>
    <fullName>NbOfVariablesUnused__c</fullName>
    <label>Nb Of Variables Unused</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>