force-app/main/default/objects/ApexHealth__c/fields/NbOfVariablesUsed__c.field-meta.xml
<CustomField>
    <fullName>NbOfVariablesUsed__c</fullName>
    <description>Indicates the number of variables used in a class</description>
    <inlineHelpText>Indicates the number of variables used in a class</inlineHelpText>
    <label>Nb Of Variables Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>