force-app/main/default/objects/ApexHealth__c/fields/VariablesPresent__c.field-meta.xml
<CustomField>
    <fullName>VariablesPresent__c</fullName>
    <label>Variables Present</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>