force-app/main/default/objects/ApexHealth__c/fields/VariablesUnused__c.field-meta.xml
<CustomField>
    <fullName>VariablesUnused__c</fullName>
    <label>Variables Unused</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>