force-app/main/default/objects/ApexHealth__c/fields/VariablesUsed__c.field-meta.xml
<CustomField>
    <fullName>VariablesUsed__c</fullName>
    <label>Variables Used</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>