force-app/main/default/objects/ApexHealth__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ClassName__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LoadId__c</columns>
    <columns>NbOfVariablesPresent__c</columns>
    <columns>NbOfVariablesUsed__c</columns>
    <columns>NbOfVariablesUnused__c</columns>
    <columns>NbOfMethodsPresent__c</columns>
    <columns>NbOfMethodsUsed__c</columns>
    <columns>NbOfMethodsUnused__c</columns>
    <columns>HealthPercentage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>